# pathfinding-benchmark

./: CMakeLists.txt  README.md
env/: CMakeLists.txt  environment.cpp  environment.h  obstacle.cpp  obstacle.h  obstacle_vector.cpp  obstacle_vector.h
exc/: CMakeLists.txt  exception.cpp  exception.h
geom/: CMakeLists.txt  algorithms_2d.cpp  algorithms_2d.h  algorithms_3d.cpp  algorithms_3d.h  box_2d.cpp  box_2d.h  point.h  point_base.h  point_traits.h  polygon.cpp  polygon.h  polygon_traits.h  segment.h
gui/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  main_window.ui
gui/graphics/: environment_view.cpp  environment_view.h  environment_view.ui  path_view.cpp  path_view.h
gui/graphics/drawables/: drawable.cpp  drawable.h  environment.cpp  environment.h  obstacle.cpp  obstacle.h  path.cpp  path.h
gui/graphics/shaders/: fpathshader.glsl  shaders.qrc  vpathshader.glsl  vshader.glsl
gui/log/: log_model.cpp  log_model.h  log_output.cpp  log_output.h  log_widget.cpp  log_widget.h  log_widget.ui
gui/tabs/: init.cpp  init.h  init.ui  path_viewer.cpp  path_viewer.h  path_viewer.ui  pathfinding_simulation.cpp  pathfinding_simulation.h  pathfinding_simulation.ui  pathfinding_simulation_results.cpp  pathfinding_simulation_results.h  pathfinding_simulation_results.ui  settings.cpp  settings.h  settings.ui  simulation_launcher_tab.cpp  simulation_launcher_tab.h  simulation_result_tab.cpp  simulation_result_tab.h  tab.cpp  tab.h  text_view.cpp  text_view.h  text_view.ui
gui/tabs/widgets/: simulation_progress.cpp  simulation_progress.h  simulation_progress.ui
log/: CMakeLists.txt  definitions.h  event.cpp  event.h  logger.cpp  logger.h  manager.cpp  manager.h  output.cpp  output.h  util.cpp  util.h
log/output/: file_output.cpp  file_output.h
math/: CMakeLists.txt  algebra.cpp  algebra.h  constants.h  definitions.h
misc/: CMakeLists.txt  cache.cpp  cache.h
pf/: CMakeLists.txt  path.h  pathfinder.cpp  pathfinder.h
pf/blovl/: baseline_pathfinder.cpp  baseline_pathfinder.h
pf/motion_planning/: bitstar_pathfinder.cpp  bitstar_pathfinder.h  motion_planner.cpp  motion_planner.h  prm_pathfinder.cpp  prm_pathfinder.h  rrt_pathfinder.cpp  rrt_pathfinder.h
pf/naive_3d/: visibility_graph.cpp  visibility_graph.h  visibility_graph_pathfinder.cpp  visibility_graph_pathfinder.h
pf/plane_cut/: obstacle_cutter.cpp  obstacle_cutter.h  plane_cut_pathfinder.cpp  plane_cut_pathfinder.h
pf/visibility_graph/: basic_visibility_graph.cpp  basic_visibility_graph.h  graph_pathfinder.cpp  graph_pathfinder.h  visibility_graph.h
pf/visibility_graph_2d/: visibility_graph.cpp  visibility_graph.h  visibility_graph_generator.cpp  visibility_graph_generator.h  visibility_graph_pathfinder.cpp  visibility_graph_pathfinder.h
pf/visibility_graph_2d/envelope_generation/: envelope.cpp  envelope.h  least_common_ancestor_calculator.cpp  least_common_ancestor_calculator.h  visibility_problem_solver.cpp  visibility_problem_solver.h
pf/visibility_graph_2d/point_sort/: line_2d.cpp  line_2d.h  planar_graph.cpp  planar_graph.h  planar_graph_generator.cpp  planar_graph_generator.h  point_sorter.cpp  point_sorter.h
pf/visibility_graph_2d/self_occlusion/: polygon_self_occlusion.cpp  polygon_self_occlusion.h
pf/visibility_graph_2d/util/: definitions.h  scenario.cpp  scenario.h  util.cpp  util.h
pf/visibility_graph_3d/: definitions.h  visibility_graph.cpp  visibility_graph.h  visibility_graph_generator.cpp  visibility_graph_generator.h  visibility_graph_pathfinder.cpp  visibility_graph_pathfinder.h
ser/: CMakeLists.txt  serializer.cpp  serializer.h
sim/: CMakeLists.txt  base_simulation.h  simulation.cpp  simulation.h
sim/pathfinding/: definitions.h  input.h  output.h  random_input_generator.cpp  random_input_generator.h  simple_output_processor.cpp  simple_output_processor.h  simulation.cpp  simulation.h  statistic_output_processor.cpp  statistic_output_processor.h  utils.cpp  utils.h
tests/: CMakeLists.txt  main.cpp
tests/env/: obstacle.h  tests.h
tests/geom/: algorithms_2d.h  point_2d.h  polygon.h  tests.h
tests/pf/: compare_paths.h  tests.h
tests/pf/blovl/: baseline_pathfinder.h
tests/pf/motion_planning/: bitstar_pathfinder.h  prm_pathfinder.h  rrt_pathfinder.h
tests/pf/plane_cut/: plane_cut_pathfinder.h
tests/pf/point_sort/: planar_graph_generator.h  point_sorter.h
tests/pf/visibility_graph/: graph_pathfinder.h
tests/pf/visibility_graph_2d/: envelope.h  least_common_ancestor_calculator.h  visibility_graph_generator.h
tests/pf/visibility_graph_3d/: visibility_graph_generator.h
tests/sim/: pathfinding_simulation.h  tests.h
